# stock-daily-analyzer

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  QUICK_DEPLOY.md  README.md  SECURITY.md  analyzer.py  attribution.py  backtester.py  config.py  database.py  llm.py  log_setup.py  main.py  notifier.py  pyproject.toml  reporting.py  requirements.txt  run_experiment.py  self_check.py  strategies.py  test_deployment.sh  test_llm.py
.github/workflows/: ci.yml  daily-analysis.yml
.trae/documents/: 构建智能新闻筛选与历史归因功能.md
deploy/: crontab.example  deploy.sh  stock-analyzer.service
deploy/docker/: Dockerfile  docker-compose.yml  run.sh
deploy/supervisor/: stock-analyzer.conf
experiments/: default_a_share_daily.json
qf/: backtest.py  cli.py  config.py  data.py  experiment.py  factors.py  metrics.py  portfolio.py  scoring.py  symbols.py  trading.py  universe.py
tests/: test_backtest_smoke.py  test_config.py  test_portfolio.py  test_scoring.py  test_tradeability.py
