[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-daily-analyzer"
version = "1.2.0"
description = "A-share daily scanner + reproducible quant research backtester (daily data, weekly rebalance)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
  "yfinance>=0.2.0",
  "akshare>=1.18.8",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "ruff>=0.6.0",
  "mypy>=1.7.0",
  "types-requests",
]

[project.scripts]
stock-analyzer = "qf.cli:main"

[tool.setuptools]
packages = ["qf"]
py-modules = [
  "analyzer",
  "attribution",
  "backtester",
  "config",
  "database",
  "llm",
  "log_setup",
  "main",
  "notifier",
  "reporting",
  "run_experiment",
  "self_check",
  "strategies",
  "test_llm",
]

[tool.ruff]
line-length = 120

